--- a/format.css
+++ b/format.css
@@ -1,10 +1,14 @@
-/*h1, h2, h3, h4, h5, p {
-	text-shadow: 0px 0px 10px white,
-		0px 0px 20px white,
-		0px 0px 20px white,
-		0px 0px 20px white;
+
+#logo img {
+	width:3em;
+	float:left;
 }
-*/
+
+#logo h1 {
+	font-family:"Comic Sans MS", cursive, sans-serif;
+	font-style:italic;
+}
+
 textarea {
 	resize: none;
 	display: block;
